fixed alignment issue in searchuser

--- a/src/styles/searchusermobile.css
+++ b/src/styles/searchusermobile.css
@@ -52,10 +52,11 @@ button:hover {
     flex-direction: column;
     align-items: center;
     overflow: scroll;
-    overflow-x: hidden;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
 }
-::-webkit-scrollbar {
-    width: 20px;
+.muserlist::-webkit-scrollbar {
+    display: none;
 }
 ::-webkit-scrollbar-track {
     background-color: transparent;
